# NeuroML-widgets

./: CONTRIBUTING.rst  HISTORY.rst  README.rst  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
neuroml_widgets/: __init__.py  component.py  debug.py  simulation.py  utils.py
src/neuroml_widgets/: __init__.py
tests/: __init__.py  test_components.py  test_neuroml_widgets.py
