[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]

exclude = [
    "examples",
    ]

[tool.ruff.lint]
ignore = ["F403", "F405"]

[tool.pytest.ini_options]
addopts = "--cov=pyneuroml --cov-report term --cov-report xml:coverage.xml -n auto"

[tool.coverage.run]
omit = [
    "tests/*",
]
