[metadata]
name = neuroml-widgets
version = 0.0.1
author = Ankur Sinha
author_email = ankursinha@ucl.ac.uk
url = https://github.com/sanjayankur31/NeuroML-widgets
license = LGPL-3.0-only
description = Jupyter widgets for utilities for NeuroML
long_description = file: README.md
long_description_content_type = text/markdown
classifiers=
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering

[options]
install_requires =
    libNeuroML

packages = find:

[options.packages.find]
where = .
include = src/neuroml_widgets/

[options.extras_require]
dev =
    pytest
    pytest-cov
    pytest-xdist
    pre-commit

[flake8]
extend-ignore = E501, E502, F403, F405, W503, W504
